# man_bomber

./: .gitignore  CMakeLists.txt  README.md
src/: srv-master.c  srv-slave.c  srv.c
src/cli/: cli.c  cli_recv.c  cli_send.c
src/client/: cli.c  main.c
src/graphics/: mainDisplay.c
src/graphics/test/: a.out  mainDisplay.c  mainDisplay.h  man_bomber.h  test.c
src/include/: list.h  mainDisplay.h  man_bomb.h  man_bomber.h  man_bomber_config.h  man_bomber_config.h.in  master.h  recv-data.h  send-data.h  slave.h  srv.h  stage_frame.h
src/lib/: list.c  magic.c  recv-data.c  send-data.c
src/srv/: srv-master.c  srv-slave.c  srv-util.c  srv.c
tests/: list.c  srv_bomb_equality.c  srv_data_recv.c
